--- a/SIContainerTableView/SIContainerTableView/Base.lproj/Main.storyboard
+++ b/SIContainerTableView/SIContainerTableView/Base.lproj/Main.storyboard
@@ -17,14 +17,34 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img1" translatesAutoresizingMaskIntoConstraints="NO" id="48N-tq-ywC">
+                                <rect key="frame" x="202" y="192" width="365" height="599"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="img2" translatesAutoresizingMaskIntoConstraints="NO" id="wV9-aJ-jPW">
+                                <rect key="frame" x="41" y="245" width="292" height="177"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="48N-tq-ywC"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=regular">
+                            <mask key="subviews">
+                                <include reference="48N-tq-ywC"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="0yM-Wx-X0g"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1002" y="304"/>
+            <point key="canvasLocation" x="1000.8" y="302.6986506746627"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="PkV-LD-4x6">
@@ -42,7 +62,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ix1-hh-gpA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133.59999999999999" y="792.95352323838085"/>
+            <point key="canvasLocation" x="-71" y="414"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="img1" width="676" height="1000"/>
+        <image name="img2" width="1364" height="1000"/>
+    </resources>
 </document>
